--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.3.1",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "notiflix": "^3.2.6",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
