--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "daisyui": "^3.7.3"
   }
 }
